[package]
description = "Library to publish messages to Foxglove via WebSocket."
authors = ["Martin Kiefel <mk@nopw.de>"]
name = "foxglove-ws"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mkiefel/foxglove-ws"
homepage = "https://github.com/mkiefel/foxglove-ws"
keywords = ["foxglove", "robotics"]
categories = ["science::robotics"]

[dependencies]
anyhow = "1.0.71"
futures-util = "0.3.28"
log = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "1.3.3", features = ["v4"] }
warp = "0.3.5"

[dev-dependencies]
env_logger = "0.10.0"
